# jarvOS-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dev.Dockerfile  libmain.c
.devcontainer/: dev.Dockerfile  devcontainer.json
cmake/: PolyverseConfig.cmake.in  castxml.cmake  jarvOSConfig.cmake.in  zeropointConfig.cmake.in
examples/: CMakeLists.txt
examples/01-libinit/: main.cpp
examples/02-logging/: main.cpp
examples/context/: main.cpp
examples/init/: main.cpp
examples/libsimpleModule/: libmain.cpp
examples/logging/: main.cpp
include/jarvOS/: jOS.h
include/polyverse/: pv.h
include/zeropoint/: zp.h
src/: CMakeLists.txt  jOS_lib.cpp  jOS_lib.h  jOS_log.cpp  jOS_log.h  jOS_module.cpp  jOS_module.h  jOS_result.cpp  pv_context.cpp  pv_context.h  pv_lib.cpp  pv_lib.h  pv_log.cpp  pv_log.h  pv_module.cpp  pv_module.h  pv_result.cpp  zp.cpp  zp_lib.cpp  zp_lib.h  zp_log.cpp  zp_log.h  zp_module.cpp  zp_module.h
src/utils/: jOS_id.cpp  jOS_id.h  jOS_macros.cpp  jOS_macros.h  pv_id.cpp  pv_id.h  pv_macros.cpp  pv_macros.h  zp_id.cpp  zp_id.h  zp_macros.cpp  zp_macros.h
