file(GLOB examples CONFIGURE_DEPENDS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
foreach(example ${examples})
  if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${example})
    message(STATUS "Adding example ${example}...")
    file(GLOB_RECURSE example_sources CONFIGURE_DEPENDS "${example}/*.cpp" "${example}/*.h")
    add_executable(${example} ${example_sources})
    add_dependencies(${example} jarvOS)
    target_link_libraries(${example} jarvOS)
  endif()
endforeach()